--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="monetag" content="83d179327b92e14dcde24b06330b43c7">
   <title>Self Earning Website</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
