--- a/templates/home.html
+++ b/templates/home.html
@@ -57,7 +57,9 @@
 
   <!-- Ads scripts -->
   
-
+  <script>(function(s){s.dataset.zone='10244153',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+  <script>(function(s){s.dataset.zone='10244161',s.src='https://groleegni.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+  <script>(function(s){s.dataset.zone='10244169',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
   <!-- Auto Refresh Script -->
   <script>
     let timeLeft = 35; // seconds
